feat(user): add app subscrtiptions notif
